--- a/sass/components/_variables.scss
+++ b/sass/components/_variables.scss
@@ -1,29 +1,29 @@
 
 
-$values:(
-  width-container: 1200px,
-  width-article:800px,
-  width-sidebar:332px,
-  width-carrousel:1600px,
-  width-imgage: 786px,
-  height-image:491px,
-  margin-left:200px,
-  margin-right:200px,
-);
+// $values:(
+//   width-container: 1200px,
+//   width-article:800px,
+//   width-sidebar:332px,
+//   width-carrousel:1600px,
+//   width-imgage: 786px,
+//   height-image:491px,
+//   margin-left:200px,
+//   margin-right:200px,
+// );
 
 $colors:(
   bg-main:#33264E,
   bg-footer: #362953,
-  link-important: #EE3E52,
-  but1: #FF6071,
-  but2: #FF7E8E,
+  // link-important: #EE3E52,
+  // but1: #FF6071,
+  // but2: #FF7E8E,
 
-  cat1: #673AB7,
-  cat2: #5567da,
-  cat3: #1e88e5,
-  cat4: #27cc81,
-  cat5: #38c4d1,
-  cat6:#e91e63,
+  // cat1: #673AB7,
+  // cat2: #5567da,
+  // cat3: #1e88e5,
+  // cat4: #27cc81,
+  // cat5: #38c4d1,
+  // cat6:#e91e63,
 
   resTwitter: #63CDF1,
   resFacebook: #507cbe,
@@ -37,47 +37,47 @@ $font-familly:(
   titre:" Playfair Display",
   texte: "Muli",
 );
-$Auteurs:(
-height-auteur: 30px,
-width-auteur: 30px,
-radius-auteur:50%
-);
-$Auteurs-deco:(
-  width-Deco: 8px,
-  height-Deco: 8px,
-  margin:0 8rem,
-);
+// $Auteurs:(
+// height-auteur: 30px,
+// width-auteur: 30px,
+// radius-auteur:50%
+// );
+// $Auteurs-deco:(
+//   width-Deco: 8px,
+//   height-Deco: 8px,
+//   margin:0 8rem,
+// );
 
-$Category:(
-  width-h5:10px,
-  height-h5:10px,
-  bg-category:#ee3e52,
-);
-$Button:(
- borde:1px solid,
-border-ligne: rgb(29, 21, 21),
+// $Category:(
+//   width-h5:10px,
+//   height-h5:10px,
+//   bg-category:#ee3e52,
+// );
+// $Button:(
+//  borde:1px solid,
+// border-ligne: rgb(29, 21, 21),
 
-);
-$Auteurs-img:(
-  width-img:30px,
-  height-img:30px,
+// );
+// $Auteurs-img:(
+//   width-img:30px,
+//   height-img:30px,
 
-);
-$Post-img:(
-  width-post:100%,
-  height-post:100%,
-);
+// );
+// $Post-img:(
+//   width-post:100%,
+//   height-post:100%,
+// );
 
 
-$circle:(
+// $circle:(
 
-width-circle:8px,
-height-circle:8px,
-margin-circle:0 8px 2px 0,
-display:inline-block,
-border-radius: 50%,
-font-family: font(texte),
-);
+// width-circle:8px,
+// height-circle:8px,
+// margin-circle:0 8px 2px 0,
+// display:inline-block,
+// border-radius: 50%,
+// font-family: font(texte),
+// );
 
 
 
