--- a/sass/components/_variables.scss
+++ b/sass/components/_variables.scss
@@ -12,7 +12,7 @@
 // );
 
 $colors:(
-  bg-main:#33264E,
+  bg-dark:#33264E,
   bg-footer: #362953,
   // link-important: #EE3E52,
   // but1: #FF6071,
