--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,7 +13,7 @@
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css');
 
  body{
- background-color: color(bg-main);
+ background-color: color(bg-dark);
  }
 .mh-100{
   height: 100px;
